static/css/things.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

#things-view {
  height: 100%;
  box-sizing: border-box;
  overflow: auto;
  padding: 7.6rem 0;
}

#things-container {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  max-height: 100%;
  display: flex;
  flex-direction: column;
}

#things {
  text-align: center;
  font-size: 1.6rem;
  color: #fff;
  flex-direction: column;
  margin: auto;
}

#directories {
  text-align: center;
  font-size: 1.6rem;
  flex-direction: column;
  color: #fff;
  display: flex;
  margin: auto;
}

#add-button {
  bottom: 2rem;
  right: 2rem;
  background: no-repeat center/100% url('/images/add.svg');
}

#add-thing-back-button {
  background-color: transparent;
}

.directory {
  background: #5288af;
  border-radius: 5px;
  border: 1px solid #48779a;
  margin: 12px 0px;
  min-width: 250px;
  min-height: 50px;
  max-height: 32px;
  overflow: hidden;
}

.directory.open {
  max-height: 100000px;
}

.directory .thing {
  opacity: 1;
}

.directory:not(.open) .thing {
  opacity: 0;
}

.directory div.bar {
  flex-direction: row;
  justify-content: space-between;
  display: flex;
  padding: 5px 10px;
  position: relative;
}

.directory div.bar div.title {
  color: white;
}

.directory div.bar button.remove {
  background: none;
  border: none;
  background-image: url(/images/clear_arrayfield.svg);
  position: absolute;
  top: 5px;
  right: 1rem;
  width: 25px;
  border-radius: 50%;
  height: 25px;
  background-color: #597285;
}

.directory div.bar button.remove:hover {
  background-color: #658196;
}

.directory div.bar .leftcontainer {
  display: flex;
}

.directory div.bar button.foldIn {
  background-image: url(/images/right-arrow.png);
  transform: rotate(90deg);
  background-size: 15px 15px;
  background-position: center;
  background-repeat: no-repeat;
  border: none;
  width: 25px;
  margin-right: 5px;
  background-color: transparent;
  height: 25px;
  transition: transform 0.3s;
  cursor: grab;
}

.directory.open div.bar button.foldIn {
  transform: rotate(-90deg);
}

[draggable] {
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: grab;
}

.drag-target {
  border: 0.2rem dashed white;
}

.directory.open.drag-target {
  border: 0.2rem dashed white;
}

